Fix #187 description not wrapping correctly

--- a/app/public/style.css
+++ b/app/public/style.css
@@ -73,7 +73,7 @@ html {
     font-weight: normal;
     font-style: italic;
     margin: 4px;
-    white-space: pre;
+    white-space: pre-wrap;
 }
 
 #download-all {
